[gd_scene load_steps=3 format=3 uid="uid://dpaxvlnn2u1f6"]

[ext_resource type="Script" path="res://material_maker/panels/preview_3d/preview_3d.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://dpulty2lkvcht" path="res://material_maker/panels/preview_3d/preview_3d_scene.tscn" id="2"]

[node name="Preview3D" type="SubViewportContainer" groups=["preview"]]
custom_minimum_size = Vector2(200, 200)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 32.0
offset_right = -4.0
offset_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true
script = ExtResource("1")

[node name="MaterialPreview" type="SubViewport" parent="."]
handle_input_locally = false
physics_object_picking = true
size = Vector2i(200, 200)
render_target_clear_mode = 1
render_target_update_mode = 4

[node name="Preview3d" parent="MaterialPreview" instance=ExtResource("2")]

[connection signal="gui_input" from="." to="." method="on_gui_input"]
